--- a/aboutus.html
+++ b/aboutus.html
@@ -5,6 +5,26 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <style>
+            ::-webkit-scrollbar {
+  width: 30px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 10px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #5EB4FF; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #3D76A5;
+}
           @font-face {
             font-family: "Mank";
             src: url("fonts/MankSans.ttf") format("truetype");
@@ -37,7 +57,7 @@
                         <a href="aboutus.html" class="nav-item nav-link active">About Us</a>
                         <a href="contactus.html" class="nav-item nav-link">Contact Us</a>
                         <a href="products.html" class="nav-item nav-link">Products</a>
-                        <a href="paying.html" class="nav-item nav-link">Payment</a>
+                        <a href="paying.html" class="nav-item nav-link">Donate</a>
                     </div>
                     <div class="navbar-nav ml-auto">
                         <a href="login.html" class="nav-item nav-link">Login</a>
